
09/18/2014 FASP 1.5.8:
- Update documentation and webpage.
- Regression test for fasp4blkoil due to a bug for setting parameters.
- Modify warning print level: less important warnings requires level>PRINT_MIN.
- Modify error print level and exit output.
- Fix several small problems in GMRES-type methods.
- Fix an AMG setup bug when setting up coarsest systems for direct solvers. 
- File name change to avoid conflicts: message.h -> fasp_const.h.
- Update regression test results.

09/15/2014 FASP 1.5.7:
- Add a user option for choosing coarse level solvers.
- Fix average number of nonzeros output format problem. 
- Change AMG complexities output format. 
- Test VS10 and Intel Composer 2015 version.
- Update VS10 setting for MUMPS.
- Stop supporting VS08 in Windows.
- Update todo list.

08/12/2014 FASP 1.5.6:
- Handling errors when RS coarsening does not succeed. 
- Handling errors when Pairwise aggreation does not succeed. 
- Handling errors when VMB aggreation does not succeed. 
- When AMG setup fail on the finest level, use coarse solver.
- Check max level and make sure allocate at least one level.
- Add a name for G0 points (for pairwise aggregation).
- Uniformize debug output format.
- Change adaptive GMRES (various versions) restart number.
- Remove unused *_omp() functions.
- Update webpage.

07/26/2014 FASP 1.5.5:
- Modify the parameter for pairwise aggregation.
- Fix warnings for data type REAL in sparse_bsr.c
- Update results of the regression test.
- Add block preconditioners for MHD.
- Update block preconditioners.
- Change dCOOmat entries to avoid conflicts with complex.h.
- Revise debug output for iterative methods and more. 
- Add error handling for classical AMG setup. 

06/20/2014 FASP 1.5.4:
- Fix a bug in io.c.
- Fix incompability in Windows VC++/IC++: mkheaders.awk reverted to the previous version.
- Fix a bug in aggregation_csr.inl for OpenMP.
- Fix a bug in smat.c for 4X4 matrix inversion. 
- Fix a bug in BSR_COO output function.